--- a/style/index.css
+++ b/style/index.css
@@ -46,6 +46,7 @@
 }
 .secao-inicio h2 {
     text-transform: uppercase;
+    text-shadow: 0.1em 0.1em #000;
 }
 .trabalhos {
     background-color: #3C1D3D;
@@ -105,70 +106,92 @@ main {
     padding-bottom: 0;
     float: none;
 }
-.palavra-home{
+.palavras-home{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.palavras-home, .subtitulo-principal{
+    transform-style: preserve-3d;
+}
+.palavras-home li{
     position: absolute;
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     letter-spacing: 0.2ch;
     color: rgb(253, 220, 255);
+    font-size: 400%;
 }
-.eficiencia{
-    top:20%;
-    left: 75%;
-    transform: rotate(-5deg)
-}
-.javascript{
-    top:8%;
+.eficiencia {
+    top: 50%;
     left: 60%;
-    transform: rotate(-10deg)
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(4px) scale(0.25);
 }
-.design{
-    top:30%;
-    left: 63%;
-    transform: rotate(10deg);
+
+.boas-praticas {
+    top: 70%;
+    left: 20%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(1px) scale(0.25);
 }
-.html5{
-    top:38%;
-    left: 78%;
-    transform: rotate(8deg);
+
+.codigo-limpo {
+    top: 45%;
+    left: 25%;
+    transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px) scale(0.25);
 }
-.otimizacoes{
-    top: 52%;
-    left: 70%;
-    transform: rotate(-12deg);
-}
-.agilidade{
-    top: 8%;
-    left: 32%;
-    transform: rotate(9deg);
-}
-.responsivo{
-    top: 20%;
-    left: 19%;
-    transform: rotate(10deg);
-}
-.acessibilidade{
-    top: 30%;
-    left: 28.7%;
-    transform: rotate(-8deg);
-}
-.codigo-limpo{
-    top: 38%;
-    left: 14%;
-    transform: rotate(-8deg);
-}
-.css3{
-    top: 42%;
-    left: 32%;
-    transform: rotate(10deg);
-}
-.boas-praticas{
+
+.css3 {
     top: 55%;
-    left: 22%;
-    transform: rotate(10deg);
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(5deg) translateZ(2px) scale(0.25);
 }
-#followme{
+
+.html5 {
+    top: 30%;
+    left: 65%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+}
+
+.javascript {
+    top: 15%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px) scale(0.25);
+}
+
+.acessibilidade {
+    top: 30%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px) scale(0.25);
+}
+
+.responsivo {
+    top: 40%;
+    left: 40%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(3px) scale(0.25);
+}
+
+.otimizacoes {
+    top: 70%;
+    left: 65%;
+    transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px) scale(0.25);
+}
+
+.agilidade {
+    top: 75%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(5deg) translateZ(1px) scale(0.25);
+}
+
+.design {
+    top: 40%;
+    left: 60%;
+    transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+}
+.followme{
     position: absolute;
+    z-index: 999;
     top: 0;
     right: 0;
     height: 15em;
@@ -178,10 +201,10 @@ main {
     transform-origin: 0 0;
     transform: translateX(19em) translateY( -13em) rotate(45deg);
 }
-#followme:hover{
+.followme:hover{
     transform: translateX(18.5em) translateY( -12.5em) rotate(45deg);
 }
-#followme span{
+.followme span{
     position: absolute;
     bottom: 0;
     left: 0;
