--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,11 @@
+html, body {
+    height: 100%;
+    overflow-x: hidden;
+}
+body {
+    perspective: 6px;
+    perspective-origin: 50% 160px;
+}
 .foto-home {
     height: 200px;
     z-index: 100;
