--- a/style/index.css
+++ b/style/index.css
@@ -124,12 +124,12 @@ main {
 .palavras-home, .subtitulo-principal{
     transform-style: preserve-3d;
 }
-.palavras-home li{
+.palavra-home{
     position: absolute;
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     letter-spacing: 0.2ch;
-    color: rgb(253, 220, 255);
+    color: rgba(255, 255, 255, 0.8);
     font-size: 400%;
 }
 .eficiencia {
@@ -142,60 +142,70 @@ main {
     top: 70%;
     left: 20%;
     transform: translate(-50%, -50%) rotate(10deg) translateZ(1px) scale(0.25);
+    opacity: .3;
 }
 
 .codigo-limpo {
     top: 45%;
     left: 25%;
     transform: translate(-50%, -50%) rotate(-10deg) translateZ(2px) scale(0.25);
+    opacity: .3;
 }
 
 .css3 {
     top: 55%;
     left: 35%;
     transform: translate(-50%, -50%) rotate(5deg) translateZ(2px) scale(0.25);
+    opacity: .6;
 }
 
 .html5 {
     top: 30%;
     left: 65%;
     transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+    opacity: .6;
 }
 
 .javascript {
     top: 15%;
     left: 60%;
     transform: translate(-50%, -50%) rotate(-5deg) translateZ(1px) scale(0.25);
+    opacity: .3;
 }
 
 .acessibilidade {
     top: 30%;
     left: 35%;
     transform: translate(-50%, -50%) rotate(-5deg) translateZ(3px) scale(0.25);
+    opacity: .85;
 }
 
 .responsivo {
     top: 40%;
     left: 40%;
     transform: translate(-50%, -50%) rotate(10deg) translateZ(3px) scale(0.25);
+    opacity: .85;
 }
 
 .otimizacoes {
     top: 70%;
     left: 65%;
     transform: translate(-50%, -50%) rotate(-5deg) translateZ(2px) scale(0.25);
+    opacity: .6;
 }
 
 .agilidade {
     top: 75%;
     left: 35%;
     transform: translate(-50%, -50%) rotate(5deg) translateZ(1px) scale(0.25);
+    opacity: .3;
 }
 
 .design {
     top: 40%;
     left: 60%;
     transform: translate(-50%, -50%) rotate(10deg) translateZ(2px) scale(0.25);
+    opacity: .85;
 }
 .followme{
     position: absolute;
@@ -220,4 +230,16 @@ main {
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     letter-spacing: 0.3ch;
+}
+.notice {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.39);
+    background-color: white;
+    z-index: 9999;
+    margin: auto auto;
+    width: 25em;
+    height: 15em;
+    transform: translate(-50%, -50%);
 }
