--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,7 @@ main{
     font-family: "Open Sans Condensed", sans-serif;
 }
 .rodape-site{
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.5);
     color: #F2FFFC;
     text-align: center;
     position: fixed;
