--- a/style/sobre-mim.css
+++ b/style/sobre-mim.css
@@ -8,8 +8,39 @@
     border-bottom-color: rgb(209, 194, 194);
     box-sizing: border-box;
     width: 35%;
+    transition: .4s;
+    position: relative;
+}
+.citacao::before{
+    content:'"';
+    position: absolute;
+    top: -0.2em;
+    opacity: .35;
+    font-size: 1000%;
+}
+.citacao:hover,
+.citacao:focus{
+    box-shadow: 0 0 0 99999px rgba(0, 0, 0, .8);
+    z-index: 99999;
+}
+.citacao:nth-of-type(even){
+    float: right;
+}
+.citacao:nth-of-type(even):hover,
+citacao:nth-of-type(even):focus{
+    transform: rotate(8deg) scale(1.3);
+}
+.citacao:nth-of-type(odd){
+    float: left;
+}
+.citacao:nth-of-type(odd):hover,
+citacao:nth-of-type(odd):focus{
+    transform: rotate(-8deg) scale(1.3);
 }
 cite{
     font-style: italic;
     float: right;
+}
+.container:first-child::first-letter{
+    font-size: 200%;
 }
