--- a/style/blog.css
+++ b/style/blog.css
@@ -1,7 +1,12 @@
 /* página blog */
-article.post{
-    border-bottom: 0.05rem solid #ccc;
-    margin-bottom: 2em;
+.post{
+    padding: 0.1em 0    ;
+}
+.post + .post{
+    background-image: linear-gradient(to right, transparent, grey, transparent);
+    background-repeat: no-repeat;
+    background-size: 80% 0.1em;
+    background-position: top center;
 }
 .read-more{
     background-color: #320a27;
@@ -9,8 +14,12 @@ article.post{
     padding: 0.6em;
     text-decoration: none;
     font-family: "Open Sans Condensed", sans-serif;
+    transition:.2s;
 }
-.post-footer a{
+.read-more:hover{
+    background-color: #851b67;
+}
+.post-tag{
     background-color: #320a27;
     border-radius: 1em;
     color: #FFF;
