--- a/style/index.css
+++ b/style/index.css
@@ -48,6 +48,10 @@ body {
     display: block;
     text-align: center;
     margin: 1em auto;
+    transition: .2s;
+}
+.botao-index:hover{
+    background-color: #631534;
 }
 .secao-inicio{
     padding: 2em 15%;
@@ -57,6 +61,15 @@ body {
     text-shadow: 0.1em 0.1em #000;
 }
 .trabalhos {
+    background-image: linear-gradient(135deg,
+                                    transparent,
+                                    transparent 0.67em,   
+                                    rgb(90, 90, 90) 0.67em, 
+                                    rgb(90, 90, 90) 0.74em, 
+                                    transparent 0.74em,
+                                    transparent);
+    background-size: 1em 1em;
+    background-attachment: fixed;
     background-color: #3C1D3D;
     border-top: 0.5em solid #000;
     border-bottom: 0.5em solid #000;
@@ -82,13 +95,25 @@ body {
     background-color: #999;
     color: #FFF;
     border-bottom: 10px solid #851944;
+    background-image: linear-gradient(45deg,
+                                    transparent,
+                                    transparent 0.67em,   
+                                    rgb(90, 90, 90) 0.67em, 
+                                    rgb(90, 90, 90) 0.74em, 
+                                    transparent 0.74em,
+                                    transparent);
+    background-size: 1em 1em;
+    background-attachment: fixed;
 }
-.blog li{
+.recent-post{
     width: 30%;
 }
-.blog li a {
+.link-to-post {
     color: #FCF;
     line-height: 3em;
+    width: 17em;
+    display: block;
+    transition: 0.2s;
 }
 .inicio-post{
     background-color: #fff;
@@ -100,6 +125,18 @@ body {
     top: 4.3em;
     width: 45%;
     left: 35%;
+    display: none;
+    transition: 0.2s;
+}
+.link-to-post:hover + .inicio-post,
+.link-to-post:focus + .inicio-post{
+    display: block;
+}
+.link-to-post:hover,
+.link-to-post:focus{
+    background-color: #fff;
+    color: #3C1D3D;
+    padding-left: 0.5em; 
 }
 footer {
     padding: 1em 15%; 
@@ -218,8 +255,10 @@ main {
     vertical-align: bottom;
     transform-origin: 0 0;
     transform: translateX(19em) translateY( -13em) rotate(45deg);
+    transition: .2s;
 }
-.followme:hover{
+.followme:hover,
+.followme:focus{
     transform: translateX(18.5em) translateY( -12.5em) rotate(45deg);
 }
 .followme span{
@@ -230,16 +269,4 @@ main {
     font-family: "Shadows Into Light", cursive;
     font-weight: bold;
     letter-spacing: 0.3ch;
-}
-.notice {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.39);
-    background-color: white;
-    z-index: 9999;
-    margin: auto auto;
-    width: 25em;
-    height: 15em;
-    transform: translate(-50%, -50%);
 }
