--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -8,7 +8,8 @@
     height: 230px;
     box-sizing: content-box;
     display: inline-flex;
-    background-color: #ffffff
+    background-color: #ffffff;
+    transition: .2s;
 }
 .box:hover{
     background-color: #ffd0d0
