--- a/style/sobre-mim.css
+++ b/style/sobre-mim.css
@@ -8,7 +8,8 @@
     border-bottom-color: rgb(209, 194, 194);
     box-sizing: border-box;
     width: 35%;
-    transition: .4s;
+    transition: transform .4s ease-in-out, box-shadow .4s ease-in;
+    transition-delay: .2s, 0s;
     position: relative;
 }
 .citacao::before{
@@ -20,7 +21,7 @@
 }
 .citacao:hover,
 .citacao:focus{
-    box-shadow: 0 0 0 99999px rgba(0, 0, 0, .8);
+    box-shadow: 0 0 0 9999px rgba(0, 0, 0, .8);
     z-index: 99999;
 }
 .citacao:nth-of-type(even){
