--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,8 @@ body{
     line-height: 1.5;
     font-family: "Crimson Text", serif;
     background-color: #F2FFFC;
+    display: flex;
+    flex-wrap: flex;
 }
 p{
     margin: 1em 0;
@@ -29,11 +31,15 @@ a{
 main a:not([class]):hover, main a:not([class]):focus{
     color: #c92e9d;
 }
+
 main{
-    width: 85%;
+    /*width: 85%;*/
+    flex-grow: 1;
 }
+
 .page-header{
-    position: relative;
+    position:absolute;
+    width: calc(100% - 250px * .9);
     color: #F2FFFC;
     background-color: #320a27;
     text-align: center;
@@ -46,13 +52,14 @@ main{
     text-shadow: 0.1em 0.1em #000;
 }
 .img-aside, .navegacao{
-    float: left;
     box-sizing: border-box;
-    border-bottom: 0.3rem solid #000;
-    border-right: 0.3rem solid #000;
 }
 .img-aside{
+    border-bottom: 0.3rem solid #000;
     width: 250px;
+    height: 250px;
+    position: absolute;
+    right: 0;
     top:0;
 }
 .navegacao{
@@ -65,7 +72,7 @@ main{
 .container{
     width: 720px;
     margin: 0 auto;
-    padding: 3rem 0; 
+    padding: 10em 0; 
     padding-bottom: 3em;
 }
 .icones-sociais li{
